huuuge_app_deployment/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "flask-deployment"
  namespace: "flask"
spec:
  selector:
    matchLabels:
      app: "flask"
  replicas: 1
  template:
    metadata:
      labels:
        app: "flask"
    spec:
      containers:
#        - image: igorsavdocker/huuuge_app
        - image: nginx
          imagePullPolicy: Always
          name: "flask"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
