huuuge_app_deployment/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-flask"
  namespace: "flask"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "flask"
