huuuge_app_deployment/flask_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "flask-ingress"
  namespace: "flask"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: flask-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-flask"
              servicePort: 80
